src/renderer/style/element-ui/collapse.scss
$--collapse-header-fill: unset;
$--collapse-header-color: unset;
$--collapse-header-hover-fill: $--color-hover; //TODO: make a var
$--collapse-content-fill: unset;
$--collapse-content-color: unset;
$--collapse-border-color: rgba(255, 255, 255, .4);
@import "element-ui/packages/theme-chalk/src/collapse.scss";

@include b(collapse) {
  border-top: unset;
  border-bottom: unset;
}
@include b(collapse-item) {
  @include e(header) {
    padding: 20px;
    transition: border-bottom-color .3s, background-color 150ms linear;
    font-size: 15px;
    &:hover {
      background-color: $--collapse-header-hover-fill;
    }
  }

  @include e(content) {
    padding-top: 10px;
    padding-bottom: 20px;
  }
}

